--- a/.goreleaser-gitea.yaml
+++ b/.goreleaser-gitea.yaml
@@ -24,9 +24,11 @@ changelog:
     - title: 🐛 Bug fixes
       regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
       order: 1
+    - title: 🎭 Puppet Modules
+      regexp: '^chore:\s(pin|update|added)\spuppet-.*'
+      order: 998
     - title: 🥴 Others
       order: 999
-
 builds:
   - skip: true
 
