--- a/.goreleaser-github.yaml
+++ b/.goreleaser-github.yaml
@@ -24,6 +24,9 @@ changelog:
     - title: 🐛 Bug fixes
       regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
       order: 1
+    - title: 🎭 Puppet Modules
+      regexp: '^chore:\s(pin|update|added)\spuppet-.*'
+      order: 998
     - title: 🥴 Others
       order: 999
 
